--- a/index.html
+++ b/index.html
@@ -1,20 +1,30 @@
 <!doctype html>
-<html>
+<html lang="en">
+
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Simple Menu</title>
+<title>Homework one web development</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
-<link href="css/main.css" rel="stylesheet" type="text/css" media="screen">
+<link href="css/styles.css" rel="stylesheet" type="text/css" media="screen">
 </head>
 <body>
-    <h1 class="hidden"></h1>
+    
+    <h1 class="hidden">QU3NCH!</h1>
+
     <div id="container">
         <main id="mainContent">
+
+            <section id="intro">
+                <h1 class="hidden">Quench Introduction</h1>
             <article>
-                <!-- Content goes here -->
+                <p> QU3NCH! is the latest craze in the beverage industry, and it's no surprise why.<br>
+                    This unique drink was created by a young entrepreneur named Sarah Smith,<br>
+                    who saw a need for a more refreshing and hydrating option on the market.<br>
+                </p>
+
             </article>    
         </main>
     </div>
