--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 <link href="css/main.css" rel="stylesheet" type="text/css" media="screen">
+<link href="css/grid.css" rel="stylesheet">
 
 <style>
     body {
