--- a/index.html
+++ b/index.html
@@ -39,6 +39,20 @@
         
             </article>    
 </div>
+
+
+</body>
+</html>
+<body>
+    <div id="gid-con">
+        <div class="col-span-full l-col-start-2 l-col-end-12 line-seperator"></div>
+<H2></H2>
+
+
+
+    </div>
+</body>
+
             <div id="container2">
                 <main id="mainContent">
                         <h1 class="hidden">Quench info</h1>
@@ -51,6 +65,12 @@
 
         </main>
         <footer>
+            <h2>Want a coupon?</h2>
+
+<p id="demo">Click now to activate savings</p>
+
+<button type="button" onclick='document.getElementById("demo").innerHTML = "3AhekZzgeY"'>click me</button>
+
             <p>&copy; copyright 2024 QU3NCH.</p>
             <h3 class="hidden">Footer Navigation</h3>
             <nav id="footer-menu">
